--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     @Styles.Render("~/Content/mainPage")
     @Scripts.Render("~/bundles/modernizr")
+    <title>Social Megazord</title>
 </head>
 
 <body>
