--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Options.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Post/Options.cshtml
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <title>Event Options</title>
+    <title>Post Options</title>
 </head>
 <body>
     @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "profile_div" }))
