--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Edit.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Event/Edit.cshtml
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <title>Edit Event</title>
 </head>
 
 <body>
