--- a/SocialMegazord2.0/SocialMegazord2.0/Views/Post/List.cshtml
+++ b/SocialMegazord2.0/SocialMegazord2.0/Views/Post/List.cshtml
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <title>Events</title>
+    <title>Posts</title>
 </head>
 <body>
     @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "profile_div" }))
